Get mod to compile